Streamline UI components with reusable dialogs and buttons for forward nodes, projects, and profiles